Always set a fixed size

when the resize mode is fitcontent, always set a fixed size for the panel
(both setMinimumSize and setMaximumSize as the same size) because this
should be the only place where the panel is resized, and every other attempt
from either anywhere else in Qt or kwin should be denied

BUG:477317